# translator

./: .clang-format  .config  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  Make.defs  Makefile  README.md  TODO.md  main.cpp  prj.conf  translator_main.cxx
bsp/: CMakeLists.txt
doc/uml/: arch.puml
lib/libyaml/src/: api.c  yaml_private.h
src/: Translator.cpp  Translator.hpp
src/Cli/: Cli.hpp
src/Interfaces/: Base.cpp  Base.hpp  I2c.cpp  I2c.hpp  InterfaceBase.cpp  InterfaceBase.hpp  Message.hpp  Spi.cpp  Spi.hpp  Uart.cpp  Uart.hpp
src/RingBuffer/: RingBuffer.hpp
src/interfaces/: Interface.cpp  Interface.hpp  Spi.cpp  Spi.hpp  Uart.cpp  Uart.hpp
test/: Makefile  RingBuffer.cpp  TestInterface.cpp
utils/monitor/: monitor.c
